# pixelling

./: AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_suggestion.md
src/pixelling/: __main__.py  cli.py  gif_io.py  io.py
src/pixelling/ops/: animated_pipeline.py  grid.py  pipeline.py  pixelate.py  quantize.py  resize.py
tests/: test_animated_pipeline.py  test_cli.py  test_gif_io.py  test_grid.py  test_io.py  test_pipeline.py  test_pixelate.py  test_quantize.py  test_resize.py
